<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_name">WP2</string>
    <string name="shared_user_label">WP2 user</string>
    <string name="new_session">New session</string>
    <string name="new_session_failsafe">Failsafe</string>
    <string name="toggle_soft_keyboard">Keyboard</string>
    <string name="reset_terminal">Reset</string>
    <string name="style_terminal">Style</string>
    <string name="share_transcript_title">Terminal transcript</string>
    <string name="help">Help</string>
    <string name="toggle_keep_screen_on">Keep screen on</string>

    <string name="bootstrap_installer_body">Installing…</string>
    <string name="bootstrap_error_title">Unable to install</string>
    <string name="bootstrap_error_body">WP2 was unable to install the bootstrap packages.\n\nCheck your network connection and try again.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">WP2 can only be installed on the primary user account.</string>

    <string name="max_terminals_reached_title">Max terminals reached</string>
    <string name="max_terminals_reached_message">Close down existing ones before creating new.</string>

    <string name="reset_toast_notification">Terminal reset.</string>

    <string name="select_url">Select URL</string>
    <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
    <string name="select_all_and_share">Share transcript</string>
    <string name="select_url_no_found">No URL found in the terminal.</string>
    <string name="select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="share_transcript_chooser_title">Send text to:</string>

    <string name="kill_process">Kill process (%d)</string>
    <string name="confirm_kill_process">Really kill this session?</string>

    <string name="session_rename_title">Set session name</string>
    <string name="session_rename_positive_button">Set</string>
    <string name="session_new_named_title">New named session</string>
    <string name="session_new_named_positive_button">Create</string>

    <string name="styling_not_installed">The WP2:Style add-on is not installed.</string>
    <string name="styling_install">Install</string>

    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>

    <string name="file_received_title">Save file in ~/downloads/</string>
    <string name="file_received_edit_button">Edit</string>
    <string name="file_received_open_folder_button">Open folder</string>

    <string name="app_name">WP2</string>
    <string name="start_button">Let\'s Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pay_1">In computer networking and telecommunication when a transmission unit is sent from the source to the destination, it contains both a header and the actual data to be transmitted. This actual data is called the payload.</string>
    <string name="pay_2">The header of the payload contains the protocol information as well as the source and the destination addresses, to deliver the payload.</string>
    <string name="pay_3">Here we are creating a payload which can give us the access of victim’s device such as call log, contacts etc. The application which we are going to create is called the RAT (Remote Access Trojan).</string>
    <string name="pay_4">So, next question is what is Trojan?</string>
    <string name="pay_5">You can define Trojan as pretend to be something other than what you actually are. Victim will download application and install which was sent by attacker as the trusted application but payload which we created would be with that application and will work as we order. </string>
    <string name="phi_1">Phishing is a method of trying to gather personal information using deceptive e-mails and websites. Phishing is a cyber attack that the message as a weapon. The goal is to trick the email recipient into believing that the message is something they want or need a request from their bank, for instance, or a note from someone in their company and to click a link or download an attachment.</string>
    <string name="phi_2">“Phish” is pronounced just like it’s spelled, which is to say like the word “fish” the analogy is of an angler throwing a baited hook out there (The phishing email) and hoping you bite.</string>
    <string name="phi_3">You are going to experience the phishing attack in the application. You are going to attack on your own device to experience how phishing is working and how your data is vulnerable in this kind of attack.</string>
    <string name="phi_4">You are going to create a phishing page of well known websites. And access that same website from your device. As the security is the major concern we can not provide that phishing website facility over the internet but still it would provide you the same experience as the internet.</string>
    <string name="wifiacc_1">Here you are going to learn and experience how the wifi connection works and let the authorized device to connect with the router. You are also going to experience brute force attack to connect with the router. </string>

</resources>
